fix path check deprecated(OSE) & todo(SemRush) fix composer+gitignore

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-	"name" : "seostats/seostats",
-	"type" : "library",
-	"description" : "SEOstats is a powerful open source PHP library to request a bunch of SEO relevant metrics for any website.",
-	"keywords" : [
+	"name": "bagart/seostats",
+	"type": "library",
+	"description": "SEOstats is a powerful open source PHP library to request a bunch of SEO relevant metrics for any website.",
+	"keywords": [
 		"SEO",
 		"SEOStats",
 		"SEO-Stats",
@@ -16,35 +16,37 @@
 		"SEMRush",
 		"Alexa"
 	],
-	"homepage" : "http://github.com/eyecatchup/SEOstats",
-	"license" : "MIT",
-	"authors" : [{
-			"name" : "Stephan Schmitz",
-			"email" : "eyecatchup@gmail.com",
-			"homepage" : "https://github.com/eyecatchup",
-			"role" : "Creator, Developer, Maintainer"
-		}, {
-			"name" : "SEOstats Community",
-			"homepage" : "https://github.com/eyecatchup/seostats/contributors",
-			"role" : "Contributor, Developer"
+	"homepage": "http://github.com/eyecatchup/SEOstats",
+	"license": "MIT",
+	"authors": [
+		{
+			"name": "Stephan Schmitz",
+			"email": "eyecatchup@gmail.com",
+			"homepage": "https://github.com/eyecatchup",
+			"role": "Creator, Developer, Maintainer"
+		},
+		{
+			"name": "SEOstats Community",
+			"homepage": "https://github.com/eyecatchup/seostats/contributors",
+			"role": "Contributor, Developer"
 		}
 	],
-	"require" : {
-		"php" : ">=5.3",
-		"ext-curl" : "*",
-		"ext-json" : "*"
+	"require": {
+		"php": ">=5.3",
+		"ext-curl": "*",
+		"ext-json": "*"
 	},
-    "require-dev" : {
-				"squizlabs/php_codesniffer" : "~1",
+    "require-dev": {
+		"squizlabs/php_codesniffer": "~1",
 		"composer/composer": "1.0.*@dev",
-        "phpunit/phpunit" : ">=3.7,<4",
-				"scrutinizer/ocular" : "~1"
+		"phpunit/phpunit": ">=3.7,<4",
+		"scrutinizer/ocular": "~1"
     },
-	"autoload" : {
-		"psr-0" : {
-			"SEOstats\\" : ""
+	"autoload": {
+		"psr-0": {
+			"SEOstats\\": ""
 		},
-		"classmap" : [
+		"classmap": [
 			"SEOstats/Services/3rdparty"
 		]
 	},
